
* Verilator 3.863 devel

****  Fix duplicate anonymous structures in $root, bug788. [Bob Newgard]

****  Fix mis-optimization of bit-swap in wide signal, bug800. [Jie Xu]

****  Fix error when tracing public parameters, bug722. [Jonathon Donaldson]

****  Fix dpiGetContext in dotted scopes, bug740. [Geoff Barrett]

****  Fix over-shift structure optimization error, bug803. [Jeff Bush]


* Verilator 3.862 2014-06-10

***   Using command line -Wno-{WARNING} now overrides file-local lint_on.

***   Add -P to suppress `line and blanks with preprocessing, bug781. [Derek Lockhart]

***   Support SV 2012 package import before port list.

****  Change SYMRSVDWORD to print as warning rather than error.

****  Fix seg-fault with variable of parameterized interface, bug692. [Jie Xu]

****  Fix false name conflict on cells in generate blocks, bug749. [Igor Lesik]

****  Fix pattern assignment to basic types, bug767. [Jie Xu]

****  Fix pattern assignment to conditionals, bug769. [Jie Xu]

****  Fix shift corner-cases, bug765, bug766, bug768, bug772, bug774, bug776. [Clifford Wolf]

****  Fix C compiler interpreting signing, bug773. [Clifford Wolf]

****  Fix late constant division by zero giving X error, bug775. [Clifford Wolf]

****  Fix gate primitives with arrays and non-arrayed pins.

****  Fix DETECTARRAY error on packed arrays, bug770. [Jie Xu]

****  Fix ENDLABEL warnings on escaped identifiers.

****  Fix string corruption, bug780. [Derek Lockhart]


* Verilator 3.860 2014-05-11

**    PSL is no longer supported, please use System Verilog assertions.

**    Support '{} assignment pattern on arrays, bug355.

**    Support streaming operators, bug649. [Glen Gibb]

**    Fix expression problems with -Wno-WIDTH, bug729, bug736, bug737, bug759.
      Where WIDTH warnings were ignored this might result in different
      warning messages and results, though it should better match the spec.
      [Clifford Wolf]

***   Add --no-trace-params.
