@@ -15,6 +15,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****  Fix over-shift structure optimization error, bug803. [Jeff Bush]
 
+****  Fix optional parameter keyword in module #(), bug810. [Iztok Jeras]
+
 
 * Verilator 3.862 2014-06-10
 
